syntax = "proto3";

import "google/protobuf/timestamp.proto";

package model;

option go_package = "backend/src/pkg/model;model";

message RegisterContainer {
  string ip_address = 1;
}

message GetContainer {
  int64  id         = 1;
  string ip_address = 2;
}

message GetContainerWithLatestPing {
  int64  id                      = 1;
  string ip_address              = 2;
  int64  ping_time               = 3;
  google.protobuf.Timestamp date = 4; // size 12, but Ping is aligned by 8, so was_successful is described next
  bool   was_successful          = 5;
}